--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20.x'
         cache: 'npm'
         
     - name: Install dependencies
@@ -67,3 +67,4 @@ jobs:
     - name: Notify deployment success
       run: |
         echo "✅ Deployment completed successfully!"
+
