--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
         source: "deploy-package.zip"
         target: "/tmp/"
         
@@ -67,4 +67,5 @@ jobs:
     - name: Notify deployment success
       run: |
         echo "✅ Deployment completed successfully!"
+
 
