--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 env:
   APP_NAME: "Otomex Innovations"
   DOMAIN: "otomexx.co.za"
-  PORT: "7014"
+  PORT: "3000"
 
 jobs:
   build-and-deploy:
@@ -32,27 +32,45 @@ jobs:
     - name: Build application
       run: |
         echo "🏗️ Building application..."
-        npm run build
+        echo "📁 Current directory structure:"
+        ls -la
+        echo "📁 Checking for src directory:"
+        ls -la src/ || echo "No src directory found"
+        
+        # Build with explicit configuration for src directory
+        if [ -d "src/app" ] || [ -d "src/pages" ]; then
+          echo "🔧 Detected src directory structure - building with custom config"
+          npm run build
+        else
+          echo "🔧 Building standard Next.js app"
+          npm run build
+        fi
         
     - name: Create deployment package
       run: |
         echo "📦 Creating deployment package..."
         mkdir -p deployment-package
         
-        # Copy only essential files
-        cp -r .next/standalone/* deployment-package/ 2>/dev/null || cp -r .next/ deployment-package/
+        # Copy ALL necessary files including src directory
+        cp -r .next/ deployment-package/
         cp -r public/ deployment-package/ 2>/dev/null || true
+        cp -r src/ deployment-package/ 2>/dev/null || true  # ← THIS IS CRITICAL
         cp package.json deployment-package/
         cp package-lock.json deployment-package/
         cp next.config.js deployment-package/ 2>/dev/null || true
-        
-        # Remove development files
-        rm -rf deployment-package/.next/cache 2>/dev/null || true
+        cp ecosystem.config.js deployment-package/ 2>/dev/null || true
+        cp server.js deployment-package/ 2>/dev/null || true
+        cp .env deployment-package/ 2>/dev/null || true
+        cp -r node_modules/ deployment-package/ 2>/dev/null || true  # Include node_modules for faster deployment
         
         echo "📁 Package contents:"
         ls -la deployment-package/
+        echo "📁 Checking if src directory is included:"
+        ls -la deployment-package/src/ 2>/dev/null || echo "No src directory in package"
         
+        # Create deployment package
         cd deployment-package && zip -r ../deploy-package.zip . && cd ..
+        
         echo "📊 Package size:"
         ls -lh deploy-package.zip
         
@@ -117,6 +135,3 @@ jobs:
         echo "🌐 Website: https://${{ env.DOMAIN }}"
         echo "📊 App: ${{ env.APP_NAME }}"
         echo "🚪 Port: ${{ env.PORT }}"
-
-
-
